--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,6 +1,12 @@
 {
   "APP_NAME": "ngTest",
   "About": "About",
+  "Accept": "Accept",
+  "Approval selection are not filled": "Approval selection are not filled",
+  "Approver": "Approver",
+  "Approver is required": "Approver is required",
+  "Chose resolution type": "Chose resolution type",
+  "Decline": "Decline",
   "Hello world !": "Hello world !",
   "Home": "Home",
   "Logged in as": "Logged in as",
@@ -8,9 +14,10 @@
   "Logout": "Logout",
   "Password": "Password",
   "Password is required": "Password is required",
+  "Remember me": "Remember me",
   "Username": "Username",
   "Username is required": "Username is required",
   "Username or password incorrect.": "Username or password incorrect.",
-  "Remember me": "Remember me",
-  "Version": "Version"
+  "Version": "Version",
+  "You can leave a comment": "You can leave a comment"
 }
